--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -4,19 +4,34 @@
 
 {% block body %}
     <div class="container">
+        <div id="ex1" class="modal">
+            <p>Thanks for clicking. That felt good.</p>
+            <a href="#" rel="modal:close">Close</a>
+        </div>
+
         <h1 class="my-3">Nos articles</h1>
         {% if not is_granted('ROLE_USER') %}
-            <a href="/login" class="my-2 btn btn-success">Connexion</a>
+            <a href="{{ path('app_login') }}" class="my-2 btn btn-success">Connexion</a>
         {% else %}
-            <a href="/logout" class="my-2 btn btn-danger">Déconnexion</a>
+            <a href="{{ path('app_logout') }}" class="my-2 btn btn-danger">Déconnexion</a>
         {% endif %}
         <div class="row">
             {% for post in posts %}
                 <div class="col-3 mb-3">
                     <div class="border border-dark rounded p-2">
-                        <h3>{{post.title}}</h3>
-                        <p>{{post.introduction}}</p>
+                        <h3>{{post.title|slice(0, 20)}}</h3>
+                        <p>{{post.description |striptags|slice(0, 100)| raw}}</p>
                         <a href="#" class="btn btn-primary">Lire la suite</a>
+                        <a href="{{ path("likes", {"id":post.id})}}" class="btn btn-link">
+
+                            {% if app.user and post.getLikesByUser(app.user) %}
+                                <i class="fas fa-thumbs-up"></i>
+                            {% else %}
+                                <i class="far fa-thumbs-up"></i>
+                            {% endif %}
+                            <span class="js-likes">{{ post.likes | length }}</span>
+                            <span class="js-label">J'aime</span>
+                        </a>
                     </div>
                 </div>
             {% endfor %}
