--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>
+        {% block title %}Welcome!{% endblock %}
+    </title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+          crossorigin="anonymous"/>
+
+    <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+    {% block stylesheets %}{% endblock %}
+</head>
+<body>
+{% block body %}{% endblock %}
+{% block javascripts %}
+    <!-- Remember to include jQuery :) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+
+    <!-- jQuery Modal -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+
+        function onClickBtn(event) {
+            event.preventDefault();
+            const url = this.href;
+            const countSpan = this.querySelector("span.js-likes");
+            const icone = this.querySelector("i");
+            axios.get(url).then(function (response) {
+                countSpan.textContent = response.data.likes;
+                if (icone.classList.contains('fas')) {
+                    icone.classList.replace('fas', 'far')
+                }else {
+                    icone.classList.replace('far', 'fas')
+                }
+            }).catch(function (error) {
+                if(error.response.status ===403){
+                   alert("Vous devez etre connecter pour Liker ")
+                    window.location.replace("http://127.0.0.1:8000/login");
+                }
+            }).then(function () {
+                if(error.response.status ===500) {
+                    alert("Une erreur est survenue merci de reessayer plutard ")
+                }
+            });
+        }
+
+        document.querySelectorAll("a.btn-link").forEach(function (link) {
+            link.addEventListener("click", onClickBtn)
+        })
+    </script>
+{% endblock %}
+</body>
 </html>
