--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -4,9 +4,30 @@
 
 {% block body %}
     <div class="container">
-        <div id="ex1" class="modal">
-            <p>Thanks for clicking. That felt good.</p>
-            <a href="#" rel="modal:close">Close</a>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+            Launch demo modal
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <h1 class="my-3">Nos articles</h1>
@@ -21,7 +42,7 @@
                     <div class="border border-dark rounded p-2">
                         <h3>{{post.title|slice(0, 20)}}</h3>
                         <p>{{post.description |striptags|slice(0, 100)| raw}}</p>
-                        <a href="#" class="btn btn-primary">Lire la suite</a>
+                        <a href="{{ path("single_page", {"id":post.id})}}) }}" class="btn btn-primary">Lire la suite</a>
                         <a href="{{ path("likes", {"id":post.id})}}" class="btn btn-link">
 
                             {% if app.user and post.getLikesByUser(app.user) %}
